# aether-api

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/cadrage/: README.md  cadrage.html
migrations/: 0001_init.sql  0002_seed_categories.sql  0002_seed_reference.sql  0003_objet_nom_unique.sql  0004_pnj_unique.sql
src/: ai.rs  config.rs  error.rs  main.rs  partie.rs  personnage.rs  quiz.rs  reference.rs  rules.rs  state.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs
src/routes/: health.rs  mod.rs
